# blockyard

./: .gitignore  AGENTS.md  CODE_REVIEW.md  CODE_REVIEW_PASS2.md  Cargo.toml  README.md  ROADMAP.md  TASK_DEPS.md  TEST_CHECKLIST.md  UBLK_IMPLEMENTATION_PLAN.md  UBLK_MOUNT_PLAN.md  blockyard_client_data_node_spec.md
.github/workflows/: ci.yml
config/: blockyard.example.toml
crates/blockyard/: Cargo.toml
crates/blockyard-cli/: Cargo.toml
crates/blockyard-cli/src/: cli.rs  client.rs  commands.rs  http_client.rs  lib.rs  main.rs  mount.rs  output.rs  types.rs
crates/blockyard-cli/tests/: cli_integration.rs
crates/blockyard-client/: Cargo.toml
crates/blockyard-client/src/: ec.rs  ec_read_pipeline.rs  error.rs  lib.rs  pipeline.rs  selector.rs  testutil.rs  traits.rs  types.rs
crates/blockyard-common/: Cargo.toml
crates/blockyard-common/src/: auth.rs  checksum.rs  config.rs  disk_state.rs  error.rs  id.rs  lease.rs  lib.rs  metrics.rs  metrics_server.rs  placement.rs  protection.rs  tls.rs  types.rs
crates/blockyard-gossip/: Cargo.toml
crates/blockyard-gossip/src/: lib.rs  member.rs  protocol.rs  service.rs  swim.rs  testutil.rs  transport.rs
crates/blockyard-protocol/: Cargo.toml
crates/blockyard-protocol/src/: codec.rs  connection.rs  consistency.rs  lib.rs  messages.rs  read_policy.rs  server.rs  version.rs  wire.rs
crates/blockyard-raft/: Cargo.toml  build.rs
crates/blockyard-raft/src/: grpc_server.rs  heartbeat.rs  lib.rs  log_store.rs  meta_group.rs  multiraft.rs  network.rs  persistent_store.rs  request.rs  response.rs  rpc.rs  server.rs  service.rs  state_machine.rs  store.rs  tcp_transport.rs  typ.rs  types.rs  volume_group.rs
crates/blockyard-storage/: Cargo.toml
crates/blockyard-storage/src/: backend.rs  disk.rs  drain.rs  ec_placement.rs  ec_reconstruct.rs  erasure.rs  error.rs  extent.rs  failure.rs  health.rs  lib.rs  placement.rs  rebalance.rs  region.rs  service.rs  zfs.rs
crates/blockyard-storage/src/background/: drain.rs  mod.rs  rate_limit.rs  rebalance.rs  repair.rs  scheduler.rs  scrub.rs
crates/blockyard-test-harness/: Cargo.toml
crates/blockyard-test-harness/src/: checker.rs  cluster.rs  fault.rs  lib.rs  mock_datanode.rs  mock_metadata.rs  network.rs  pattern.rs  pipeline_testutil.rs  process_harness.rs  qemu_harness.rs  raft_testutil.rs  repair_testutil.rs  scenario.rs  snapshot.rs  vm.rs  workload.rs
crates/blockyard-test-harness/tests/: availability.rs  background_ops.rs  full_stack.rs  rebalancing.rs  server_integration.rs
crates/blockyard-ublk/: Cargo.toml
crates/blockyard-ublk/src/: ambiguous_write.rs  block_handler.rs  client.rs  cluster_client.rs  crash_recovery.rs  ec_write_pipeline.rs  freshness.rs  http_metadata_client.rs  lease_manager.rs  lib.rs  metadata_cache.rs  nbd.rs  quorum_health.rs  session.rs  stale_epoch.rs  tcp_client.rs  traits.rs  ublk.rs  ublk_ctrl.rs  ublk_io.rs  ublk_server.rs  uring.rs  watermark.rs  write_batcher.rs  write_pipeline.rs
crates/blockyard/src/: api.rs  lib.rs  main.rs  node.rs
proto/: blockyard.proto
tests/: Cargo.toml  auth.rs  availability.rs  concurrent.rs  consistency.rs  data_integrity.rs  ec_write_pipeline_e2e.rs  end_to_end.rs  erasure.rs  erasure_coding_e2e.rs  fault_injection.rs  integrity.rs  observability.rs  raft_recovery_e2e.rs  rebalance.rs  replication_e2e.rs  stage-cluster.sh  ublk.rs  ublk_client.rs  ublk_filesystem.rs  vm-cluster.sh
tests/harness/: checker.rs  cluster.rs  faults.rs  mod.rs  workload.rs
tools/: ublk_e2e.rs
