[workspace]
members = [
    "crates/blockyard",
    "crates/blockyard-cli",
    "crates/blockyard-client",
    "crates/blockyard-common",
    "crates/blockyard-gossip",
    "crates/blockyard-protocol",
    "crates/blockyard-raft",
    "crates/blockyard-storage",
    "crates/blockyard-ublk",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
repository = "https://github.com/blockyardio/blockyard"

[workspace.dependencies]
# Shared across workspace
anyhow = "1"
bytes = "1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
reed-solomon-erasure = { version = "6", features = ["simd-accel"] }

[profile.release]
lto = true
codegen-units = 1
