[package]
name = "blockyard-workspace"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[workspace]
members = [
    "crates/blockyard",
    "crates/blockyard-cli",
    "crates/blockyard-client",
    "crates/blockyard-common",
    "crates/blockyard-gossip",
    "crates/blockyard-protocol",
    "crates/blockyard-raft",
    "crates/blockyard-storage",
    "crates/blockyard-ublk",
    "crates/blockyard-test-harness",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
repository = "https://github.com/blockyardio/blockyard"

[workspace.dependencies]
# Shared across workspace
anyhow = "1"
blake3 = "1"
hmac = "0.12"
sha2 = "0.10"
bytes = "1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
reed-solomon-erasure = { version = "6", features = ["simd-accel"] }

[dev-dependencies]
blockyard-common = { path = "crates/blockyard-common" }
blockyard-raft = { path = "crates/blockyard-raft" }
blockyard-storage = { path = "crates/blockyard-storage" }
blockyard-ublk = { path = "crates/blockyard-ublk" }
blockyard-client = { path = "crates/blockyard-client" }
blockyard-test-harness = { path = "crates/blockyard-test-harness" }
blake3.workspace = true
bytes.workspace = true
openraft = { version = "0.9", features = ["serde", "storage-v2"] }
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile = "3"
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
uuid.workspace = true

[profile.release]
lto = true
codegen-units = 1
