[package]
name = "blockyard-integration-tests"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
blockyard-common = { workspace = true }
blockyard-raft = { workspace = true }
blockyard-gossip = { workspace = true }
blockyard-protocol = { workspace = true }
blockyard-storage = { workspace = true }
blockyard-ublk = { workspace = true }

[[test]]
name = "consistency"
path = "consistency.rs"

[[test]]
name = "availability"
path = "availability.rs"

[[test]]
name = "integrity"
path = "integrity.rs"

[[test]]
name = "rebalance"
path = "rebalance.rs"

[[test]]
name = "ublk"
path = "ublk.rs"

[[test]]
name = "erasure"
path = "erasure.rs"
