[package]
name = "blockyard-cli"
description = "Blockyard CLI client for remote cluster management"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "byard"
path = "src/main.rs"

[dependencies]
blockyard-common = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
