[package]
name = "blockyard-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Blockyard distributed block storage — lightweight remote client (byard)"

[[bin]]
name = "byard"
path = "src/main.rs"

[dependencies]
blockyard-common = { path = "../blockyard-common" }
blockyard-ublk = { path = "../blockyard-ublk" }
bytes.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
comfy-table.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
reqwest.workspace = true

[features]
default = []
ublk-kernel = ["blockyard-ublk/ublk-kernel"]
testutil = ["parking_lot"]

[dependencies.parking_lot]
workspace = true
optional = true

[dev-dependencies]
blockyard-cli = { path = ".", features = ["testutil"] }
blockyard-common = { path = "../blockyard-common" }
parking_lot.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
chrono.workspace = true
