[package]
name = "blockyard-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Blockyard distributed block storage — client read path"

[dependencies]
blockyard-common = { path = "../blockyard-common" }
blockyard-protocol = { path = "../blockyard-protocol" }
bytes.workspace = true
parking_lot.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
uuid.workspace = true
