[package]
name = "blockyard-gossip"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Blockyard distributed block storage — SWIM cluster membership"

[dependencies]
blockyard-common = { path = "../blockyard-common" }
bytes.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
