[package]
name = "blockyard-raft"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Blockyard distributed block storage — multi-raft consensus"

[dependencies]
blockyard-common = { path = "../blockyard-common" }
bytes.workspace = true
futures = "0.3"
openraft = { version = "0.9", features = ["serde", "storage-v2"] }
parking_lot = "0.12"
rand = "0.8"
serde.workspace = true
serde_json = "1"
tokio.workspace = true
tracing.workspace = true
