[package]
name = "blockyard-storage"
description = "ZFS zvol management and local storage backend"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
blockyard-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
serde_json = { workspace = true }
