[package]
name = "blockyard-storage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Blockyard distributed block storage — storage engine, extent files, placement"

[dependencies]
blockyard-common = { path = "../blockyard-common" }
blockyard-protocol = { path = "../blockyard-protocol" }
bytes.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
