[package]
name = "blockyard-test-harness"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Integration test harness with VM/process-based cluster management and fault injection"

[dependencies]
blockyard-common = { path = "../blockyard-common" }
blockyard-protocol = { path = "../blockyard-protocol" }

anyhow.workspace = true
bytes.workspace = true
blake3.workspace = true
parking_lot.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
uuid.workspace = true

nix = { version = "0.29", features = ["signal", "process"] }
rand = "0.8"
sha2 = "0.10"

[dev-dependencies]
blockyard-raft = { path = "../blockyard-raft" }
blockyard-storage = { path = "../blockyard-storage" }
bytes.workspace = true
openraft = { version = "0.9", features = ["serde", "storage-v2"] }
parking_lot.workspace = true
tempfile = "3"
tracing-subscriber = { workspace = true }
