[package]
name = "blockyard-ublk"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Blockyard distributed block storage — UBLK client, session management, and write pipeline"

[dependencies]
blockyard-common = { path = "../blockyard-common" }
blockyard-protocol = { path = "../blockyard-protocol" }
bytes.workspace = true
parking_lot.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
reed-solomon-erasure.workspace = true
