[package]
name = "blockyard-ublk"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Blockyard distributed block storage — UBLK client, session management, and write pipeline"

[features]
default = []
ublk-kernel = ["libublk"]

[dependencies]
blockyard-common = { path = "../blockyard-common" }
blockyard-client = { path = "../blockyard-client" }
blockyard-protocol = { path = "../blockyard-protocol" }
bytes.workspace = true
libublk = { version = "0.4", optional = true }
parking_lot.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
reed-solomon-erasure.workspace = true

[dev-dependencies]
axum.workspace = true
