[package]
name = "blockyard"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Blockyard distributed block storage — main node process"

[[bin]]
name = "blockyard"
path = "src/main.rs"

[dependencies]
blockyard-common = { path = "../blockyard-common" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
