[package]
name = "blockyard"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Blockyard distributed block storage — main node process"

[[bin]]
name = "blockyard"
path = "src/main.rs"

[dependencies]
blockyard-common = { path = "../blockyard-common" }
blockyard-protocol = { path = "../blockyard-protocol" }
blockyard-raft = { path = "../blockyard-raft" }
blockyard-storage = { path = "../blockyard-storage" }
anyhow.workspace = true
clap.workspace = true
openraft = { version = "0.9", features = ["serde", "storage-v2"] }
parking_lot.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
